# secrets-monitor

./: README.md  pyproject.toml
secrets_monitor/: lambda_function.py
tests/: conftest.py  test_lambda_function.py
