[tool.poetry]
name = "secrets-monitor"
version = "0.1.0"
description = ""
authors = ["Craig Sands <craig.sands@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
boto3 = "^1.26.85"

[tool.pytest.ini_options]
log_cli = "true"
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
